@@ -19,4 +19,5 @@
 import PageController from '../page';
 
 export default PageController.extend({
+  attempts: null,
 });
