@@ -62,7 +62,7 @@
     }
   }
 
-  .status-succeeded, .status-succeeded-with-failures {
+  .status-finished, .status-succeeded, .status-succeeded-with-failures {
     .label-success;
     .status-icon {
       .fa-icon(check);
