@@ -23,6 +23,10 @@ b {
   width: 50%;
 }
 
+.display-block {
+  display: block;
+}
+
 .left-delim {
   border-left: 1px solid @border-color;
   margin-left: 10px;
