@@ -46,4 +46,12 @@ ENV = {
    * Refer http://momentjs.com/timezone/docs/ for valid entries.
    */
   //timeZone: "UTC",
+
+  /*
+   * yarnProtocol:
+   * If specified, this protocol would be used to construct node manager log links.
+   * Possible values: http, https
+   * Default value: If not specified, protocol of hosts.rm will be used
+   */
+  //yarnProtocol: "<value>",
 };
