@@ -57,7 +57,7 @@
   },
   "dependencies": {
     "em-helpers": "0.5.8",
-    "em-table": "0.3.11",
+    "em-table": "0.3.12",
     "em-tgraph": "0.0.3"
   }
 }
