@@ -11,6 +11,7 @@ ALL CHANGES:
   TEZ-3165. Allow Inputs/Outputs to be initialized serially, control processor initialization relative to Inputs/Outputs
   TEZ-3214. Tez UI 2: Pagination in All DAGs
   TEZ-3210. Tez UI 2: license should account for numeral, more-js, loader.js , etc
+  TEZ-3087. Tez UI 2: Add log links in task & attempt details page
 
 Release 0.8.3: 2016-04-14 
 
